# node-addon-examples-with-cmakejs

./: LICENSE  README.md
examples/hello-world/: CMakeLists.txt  HelloWorld.cpp  README.md  hello-world.js  index.js  package-lock.json  package.json
examples/hello-world/test/: hello-world.js
examples/object-wrap/: CMakeLists.txt  README.md  index.js  package-lock.json  package.json
examples/object-wrap/src/: Addon.cpp  SmartNumber.cpp  SmartNumber.h
examples/object-wrap/test/: smart-number.js
